feat(index): case list add carousel

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/ico" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>TerraGoGo - 全球领先的跨境稳定币支付服务商</title>
+		<title>TerraPay - 全球领先的跨境稳定币支付服务商</title>
 		<meta name="description" content="基于USDT、USDC等稳定币的快速、安全且合规的端到端支付平台，助力商户数字化经营升级" />
 	</head>
 
